[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Dialogs/ExportSprites.gd" type="Script" id=1]

[node name="ExportSprites" type="FileDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 3.0
margin_bottom = 48.0
window_title = "Export Sprite as .png"
resizable = true
access = 2
filters = PoolStringArray( "*.png ; PNG Image" )
current_dir = "C:/Users/Overloaded/Dropbox/Orama Founding Members/εταιρικα αρχεια/Godot Projects/Pixelorama"
current_path = "C:/Users/Overloaded/Dropbox/Orama Founding Members/εταιρικα αρχεια/Godot Projects/Pixelorama/"
script = ExtResource( 1 )

[node name="ExportOption" type="OptionButton" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 507.0
margin_bottom = 312.0
text = "Export current frame"
items = [ "EXPORT_CURRENT_FRAME_LABEL", null, false, 0, null, "EXPORT_FRAMES_AS_MULTIPLE_FILES_LABEL", null, false, 1, null, "EXPORT_FRAMES_AS_SPRITESHEET_LABEL", null, false, 2, null ]
selected = 0

[node name="Resize" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 507.0
margin_bottom = 312.0

[node name="Label" type="Label" parent="Resize"]
margin_top = 145.0
margin_right = 46.0
margin_bottom = 159.0
text = "Resize:"

[node name="ResizeValue" type="SpinBox" parent="Resize"]
margin_left = 50.0
margin_right = 124.0
margin_bottom = 304.0
mouse_default_cursor_shape = 2
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 100.0
suffix = "%"

[node name="Label2" type="Label" parent="Resize"]
margin_left = 128.0
margin_top = 145.0
margin_right = 215.0
margin_bottom = 159.0
text = "Interpolation:"

[node name="Interpolation" type="OptionButton" parent="Resize"]
margin_left = 219.0
margin_right = 310.0
margin_bottom = 304.0
text = "Nearest"
items = [ "Nearest", null, false, 0, null, "Bilinear", null, false, 1, null, "Cubic", null, false, 2, null, "Trilinear", null, false, 3, null, "Lanczos", null, true, 4, null ]
selected = 0

[node name="Spritesheet" type="HBoxContainer" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 507.0
margin_bottom = 312.0

[node name="ColumnsOrRows" type="OptionButton" parent="Spritesheet"]
margin_right = 97.0
margin_bottom = 304.0
text = "Columns"
items = [ "Columns", null, false, 0, null, "Rows", null, false, 1, null ]
selected = 0

[node name="Frames" type="SpinBox" parent="Spritesheet"]
margin_left = 101.0
margin_right = 175.0
margin_bottom = 304.0
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0
[connection signal="file_selected" from="." to="." method="_on_ExportSprites_file_selected"]
[connection signal="item_selected" from="ExportOption" to="." method="_on_ExportOption_item_selected"]
[connection signal="value_changed" from="Resize/ResizeValue" to="." method="_on_ResizeValue_value_changed"]
[connection signal="item_selected" from="Resize/Interpolation" to="." method="_on_Interpolation_item_selected"]
[connection signal="item_selected" from="Spritesheet/ColumnsOrRows" to="." method="_on_ColumnsOrRows_item_selected"]
[connection signal="value_changed" from="Spritesheet/Frames" to="." method="_on_Frames_value_changed"]
